--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,24 @@
             <version>1.2.17</version>
         </dependency>
 
+
+
     </dependencies>
+
+    <build>
+        <finalName>MavenDemo</finalName>
+        <plugins>
+            <!--mybatis-generator插件-->
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.6</version>
+                <configuration>
+                    <verbose>true</verbose>
+                    <overwrite>true</overwrite>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
