--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -1,9 +1,9 @@
-##jdbc.driver=com.mysql.cj.jdbc.Driver
-##jdbc.url=jdbc:mysql://192.168.1.151:3306/mybatis?allowMultiQueries=true
-##jdbc.username=root
-##jdbc.password=Citi2013
-
-jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbc.url=jdbc:sqlserver://127.0.0.1:1433;DatabaseName=master
-jdbc.username=sa
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/mybatis?allowMultiQueries=true
+jdbc.username=root
 jdbc.password=123456
+
+#jdbc.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#jdbc.url=jdbc:sqlserver://127.0.0.1:1433;DatabaseName=master
+#jdbc.username=sa
+#jdbc.password=123456
